[tool.poetry]
name = "responderbot"
version = "0.0.1"
description = "An auto-responding Slack bot"
authors = ["MattKobayashi <matthew@kobayashi.au>"]

[tool.poetry.dependencies]
python = "^3.11"
slack_bolt = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
